--- a/app/Gemfile
+++ b/app/Gemfile
@@ -48,6 +48,8 @@ gem 'database_cleaner'
 gem 'vcr'
 gem 'timecop'
 
+gem 'ruby-mpd'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
