add basic authentication with devise

--- a/app/Gemfile
+++ b/app/Gemfile
@@ -35,6 +35,8 @@ gem 'feedjira'
 gem 'ruby-audioinfo'
 gem 'chronic_duration'
 
+gem 'devise'
+
 gem 'sidekiq'
 gem 'sinatra', require: false
 gem 'slim'
