parse duration. if not available add when downloading file. add filesize attribute to episode

--- a/app/Gemfile
+++ b/app/Gemfile
@@ -32,6 +32,9 @@ gem 'json'
 gem 'will_paginate'
 gem 'feedjira'
 
+gem 'ruby-audioinfo'
+gem 'chronic_duration'
+
 gem 'sidekiq'
 gem 'sinatra', require: false
 gem 'slim'
