setup mailer. use application.yml for config. all mails are send in the background. devise also uses sidekiq to send mails.

--- a/app/Gemfile
+++ b/app/Gemfile
@@ -36,8 +36,10 @@ gem 'ruby-audioinfo'
 gem 'chronic_duration'
 
 gem 'devise'
-
+gem "devise-async"
 gem 'sidekiq'
+gem 'figaro'
+
 gem 'sinatra', require: false
 gem 'slim'
 
