--- a/app/Gemfile
+++ b/app/Gemfile
@@ -20,6 +20,7 @@ gem 'coffee-rails', '~> 4.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+gem 'jquery-ui-rails'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
@@ -41,6 +42,8 @@ gem 'devise'
 gem "devise-async"
 gem 'sidekiq'
 gem 'figaro'
+
+gem 'acts_as_list'
 
 gem 'sinatra', require: false
 gem 'slim'
