--- a/app/Gemfile
+++ b/app/Gemfile
@@ -53,6 +53,7 @@ gem 'slim'
 gem 'ruby-audioinfo'
 gem 'wavefile'
 gem 'ruby-mpd'
+gem 'taglib-ruby' # requires taglib package of the system distro installed! see: https://robinst.github.io/taglib-ruby/
 
 # testing
 gem 'test-unit'
