--- a/app/Gemfile
+++ b/app/Gemfile
@@ -49,6 +49,8 @@ gem 'acts_as_list'
 gem 'sinatra', require: false
 gem 'slim'
 
+gem 'mini_magick' # requires imagemagick package of the system distro to be installed. see: https://github.com/minimagick/minimagick
+
 # audio
 gem 'ruby-audioinfo'
 gem 'wavefile'
