--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -8,14 +8,15 @@ development:
   username: postgres
   password: hackme
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: test
+  port: 5432
   pool: 30
-  timeout: 5000
+  reconnect: true
+  username: postgres
+  password: hackme
 
 production:
   adapter: postgresql
