--- a/app/Gemfile
+++ b/app/Gemfile
@@ -28,7 +28,7 @@ gem 'foundation-rails', '~> 5.2'
 gem 'font-awesome-rails', '~> 4.0'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem 'turbolinks'
+#gem 'turbolinks'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
